--- a/src/html/about.html
+++ b/src/html/about.html
@@ -1,77 +1,94 @@
-<section class="header">
-  <header class="intro-header" ng-style="{ 'background-image' : 'url({{baseURL}}/images/about.jpg)' }">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-          <div class="site-heading">
-            <h1 class="header-text">About Me</h1>
-            <hr class="small">
-            <span class="subheading header-text">I am Anthony</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </header>
-
-  <img class="scroll" ng-src="{{baseURL}}/images/scroll.png" ></img>
-
-</section>
-
-<section class="pageWrapper">
-  <div class="push-big"></div>
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-6">
-        <h4>About</h4>
-        <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-        <h4>Subheading</h4>
-        <img ng-src="http://i.imgur.com/inP1q7g.jpg" />
-
-        <h4>Subheading</h4>
-        <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-      </div>
-
-      <div class="col-lg-6">
-        <h4>About</h4>
-        <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-        <h4>Subheading</h4>
-        <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-        <h4>Subheading</h4>
-        <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-      </div>
-    </div>
-    <div class="push"></div>
+<div class="push-big"></div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4 text-right">{{home_row_1_col_1}}</div>
+    <div class="col-md-4">{{home_row_1_col_2}}</div>
+    <div class="col-md-4">{{home_row_1_col_3}}</div>
   </div>
 
-  <page-footer></page-footer>
-</section>
+  <div class="push"></div>
 
-<script>
-  (function($) {
-    $(document).ready(function() {
-      $(document).alton({
-        firstClass: 'header', // Set the first container class
-        bodyContainer: 'pageWrapper', // Set the body container
-        scrollMode: 'headerScroll', // Set the scroll mode
-      });
-    });
-  })(jQuery);
+  <div class="row">
+    <div class="col-md-4 pull-right text-right">{{home_row_1_col_1}}</div>
+  </div>
 
-  (function(i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r;
-    i[r] = i[r] || function() {
-      (i[r].q = i[r].q || []).push(arguments)
-    }, i[r].l = 1 * new Date();
-    a = s.createElement(o),
-      m = s.getElementsByTagName(o)[0];
-    a.async = 1;
-    a.src = g;
-    m.parentNode.insertBefore(a, m)
-  })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+  <div class="push"></div>
 
-  ga('create', 'UA-60571989-1', 'auto');
-  ga('send', 'pageview');
-</script>
+  <div class="row">
+    <div class="col-md-4 text-right">{{home_row_1_col_1}}</div>
+    <div class="col-md-4">{{home_row_1_col_2}}</div>
+    <div class="col-md-4">{{home_row_1_col_3}}</div>
+  </div>
+
+  <div class="push"></div>
+
+  <div class="row">
+    <div class="col-md-4 text-right">{{home_row_1_col_1}}</div>
+    <div class="col-md-4">{{home_row_1_col_2}}</div>
+    <div class="col-md-4">{{home_row_1_col_3}}</div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-4 pull-right text-right">{{home_row_1_col_1}}</div>
+  </div>
+
+  <div class="push"></div>
+
+  <div class="row">
+    <div class="col-md-4 text-right">{{home_row_1_col_1}}</div>
+    <div class="col-md-4">{{home_row_1_col_2}}</div>
+    <div class="col-md-4">{{home_row_1_col_3}}</div>
+  </div>
+
+  <div class="push"></div>
+
+  <div class="row">
+    <div class="col-md-4 text-right">{{home_row_1_col_1}}</div>
+    <div class="col-md-4">{{home_row_1_col_2}}</div>
+    <div class="col-md-4">{{home_row_1_col_3}}</div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-4 pull-right text-right">{{home_row_1_col_1}}</div>
+  </div>
+
+  <div class="push"></div>
+
+  <div class="row">
+    <div class="col-md-4 text-right">{{home_row_1_col_1}}</div>
+    <div class="col-md-4">{{home_row_1_col_2}}</div>
+    <div class="col-md-4">{{home_row_1_col_3}}</div>
+  </div>
+
+  <div class="push"></div>
+
+  <div class="row">
+    <div class="col-md-4 text-right">{{home_row_1_col_1}}</div>
+    <div class="col-md-4">{{home_row_1_col_2}}</div>
+    <div class="col-md-4">{{home_row_1_col_3}}</div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-4 pull-right text-right">{{home_row_1_col_1}}</div>
+  </div>
+
+  <div class="push"></div>
+
+  <div class="row">
+    <div class="col-md-4 text-right">{{home_row_1_col_1}}</div>
+    <div class="col-md-4">{{home_row_1_col_2}}</div>
+    <div class="col-md-4">{{home_row_1_col_3}}</div>
+  </div>
+
+  <div class="push"></div>
+
+  <div class="row">
+    <div class="col-md-4 text-right">{{home_row_1_col_1}}</div>
+    <div class="col-md-4">{{home_row_1_col_2}}</div>
+    <div class="col-md-4">{{home_row_1_col_3}}</div>
+  </div>
+
+  <div class="push"></div>
+</div>
+
+<div class="line"></div>
