--- a/src/html/experience.html
+++ b/src/html/experience.html
@@ -1,53 +1,3 @@
-<section class="header">
-  <header class="intro-header" ng-style="{ 'background-image' : 'url({{baseURL}}/images/about.jpg)', 'margin' : '0' }">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-          <div class="site-heading">
-            <h1 class="header-text">Experience</h1>
-            <hr class="small">
-            <span class="subheading header-text">The things</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </header>
-
-  <img class="scroll-experience" ng-src="{{baseURL}}/images/scroll.png"></img>
-
-</section>
-
-<section class="pageWrapper">
-  <div ui-view></div>
-
-  <div class="push-big"></div>
-
-  <page-footer></page-footer>
-</section>
-
-<script>
-  (function($) {
-    $(document).ready(function() {
-      $(document).alton({
-        firstClass: 'header', // Set the first container class
-        bodyContainer: 'pageWrapper', // Set the body container
-        scrollMode: 'headerScroll', // Set the scroll mode
-      });
-    });
-  })(jQuery);
-
-  (function(i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r;
-    i[r] = i[r] || function() {
-      (i[r].q = i[r].q || []).push(arguments)
-    }, i[r].l = 1 * new Date();
-    a = s.createElement(o),
-      m = s.getElementsByTagName(o)[0];
-    a.async = 1;
-    a.src = g;
-    m.parentNode.insertBefore(a, m)
-  })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-  ga('create', 'UA-60571989-1', 'auto');
-  ga('send', 'pageview');
-</script>
+<div ng-repeat="entry in entries">
+  <experience-entry></experience-entry>
+</div>
