--- a/src/html/home.html
+++ b/src/html/home.html
@@ -1,145 +1,49 @@
-<section class="header">
-  <header class="intro-header" ng-style="{ 'background-image' : 'url({{baseURL}}/images/home.jpg)' }">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-          <div class="site-heading">
-            <h1 class="header-text">Angular</h1>
-            <hr class="small">
-            <span class="subheading header-sub-text">Shapes and Things</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </header>
+<style>
+  #pop {
+    text-align:center;
+  }
 
-  <img class="scroll" ng-src="{{baseURL}}/images/scroll.png"></img>
+  .text {
+    font-family: 'Open Sans';
+    font-size: 60px;
+    font-weight: bold;
+  }
+</style>
 
-</section>
+<div id="trigger"></div>
 
-<section class="pageWrapper">
-  <div class="push-big"></div>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4 text-right">{{home_row_1_col_1}}</div>
-      <div class="col-md-4">{{home_row_1_col_2}}</div>
-      <div class="col-md-4">{{home_row_1_col_3}}</div>
-    </div>
-
-    <div class="push"></div>
-
-    <div class="row">
-      <div class="col-md-4 pull-right text-right">{{home_row_1_col_1}}</div>
-    </div>
-
-    <div class="push"></div>
-
-    <div class="row">
-      <div class="col-md-4 text-right">{{home_row_1_col_1}}</div>
-      <div class="col-md-4">{{home_row_1_col_2}}</div>
-      <div class="col-md-4">{{home_row_1_col_3}}</div>
-    </div>
-
-    <div class="push"></div>
-
-    <div class="row">
-      <div class="col-md-4 text-right">{{home_row_1_col_1}}</div>
-      <div class="col-md-4">{{home_row_1_col_2}}</div>
-      <div class="col-md-4">{{home_row_1_col_3}}</div>
-    </div>
-
-    <div class="row">
-      <div class="col-md-4 pull-right text-right">{{home_row_1_col_1}}</div>
-    </div>
-
-    <div class="push"></div>
-
-    <div class="row">
-      <div class="col-md-4 text-right">{{home_row_1_col_1}}</div>
-      <div class="col-md-4">{{home_row_1_col_2}}</div>
-      <div class="col-md-4">{{home_row_1_col_3}}</div>
-    </div>
-
-    <div class="push"></div>
-
-    <div class="row">
-      <div class="col-md-4 text-right">{{home_row_1_col_1}}</div>
-      <div class="col-md-4">{{home_row_1_col_2}}</div>
-      <div class="col-md-4">{{home_row_1_col_3}}</div>
-    </div>
-
-    <div class="row">
-      <div class="col-md-4 pull-right text-right">{{home_row_1_col_1}}</div>
-    </div>
-
-    <div class="push"></div>
-
-    <div class="row">
-      <div class="col-md-4 text-right">{{home_row_1_col_1}}</div>
-      <div class="col-md-4">{{home_row_1_col_2}}</div>
-      <div class="col-md-4">{{home_row_1_col_3}}</div>
-    </div>
-
-    <div class="push"></div>
-
-    <div class="row">
-      <div class="col-md-4 text-right">{{home_row_1_col_1}}</div>
-      <div class="col-md-4">{{home_row_1_col_2}}</div>
-      <div class="col-md-4">{{home_row_1_col_3}}</div>
-    </div>
-
-    <div class="row">
-      <div class="col-md-4 pull-right text-right">{{home_row_1_col_1}}</div>
-    </div>
-
-    <div class="push"></div>
-
-    <div class="row">
-      <div class="col-md-4 text-right">{{home_row_1_col_1}}</div>
-      <div class="col-md-4">{{home_row_1_col_2}}</div>
-      <div class="col-md-4">{{home_row_1_col_3}}</div>
-    </div>
-
-    <div class="push"></div>
-
-    <div class="row">
-      <div class="col-md-4 text-right">{{home_row_1_col_1}}</div>
-      <div class="col-md-4">{{home_row_1_col_2}}</div>
-      <div class="col-md-4">{{home_row_1_col_3}}</div>
-    </div>
-
-    <div class="push"></div>
+  <div id="pop">
+    <p class="text">Hello!</p>
   </div>
 
-  <div class="line"></div>
-
-  <page-footer></page-footer>
-</section>
-
 <script>
-  (function($) {
-    $(document).ready(function() {
-      $(document).alton({
-        firstClass: 'header', // Set the first container class
-        bodyContainer: 'pageWrapper', // Set the body container
-        scrollMode: 'headerScroll', // Set the scroll mode
-      });
-    });
-  })(jQuery);
+  var controller = new ScrollMagic.Controller({
+    globalSceneOptions: {
+      triggerHook: "onLeave"
+    }
+  });
 
+  var wh = window.innerHeight,
+    $pop = $('#pop');
 
-  (function(i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r;
-    i[r] = i[r] || function() {
-      (i[r].q = i[r].q || []).push(arguments)
-    }, i[r].l = 1 * new Date();
-    a = s.createElement(o),
-      m = s.getElementsByTagName(o)[0];
-    a.async = 1;
-    a.src = g;
-    m.parentNode.insertBefore(a, m)
-  })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+  var pop = new TimelineMax();
+  pop.to($pop, 0.7, {
+    transform: 'scale(1.5)',
+    ease: Elastic.easeInOut
+  });
 
-  ga('create', 'UA-60571989-1', 'auto');
-  ga('send', 'pageview');
+  var scene = new ScrollMagic.Scene({
+      triggerElement: "#trigger"
+    })
+    .setTween(pop)
+    .addIndicators({
+      name: "Pop"
+    })
+    .addTo(controller);
+
+  // get the current triggerHook value
+  var triggerHook = scene.triggerHook();
+
+  // set a new triggerHook using a number
+  scene.triggerHook(0.7);
 </script>
